--- a/css/vitimaera.css
+++ b/css/vitimaera.css
@@ -24,7 +24,7 @@ body {
 
 .texto {
     background-color: red;
-    width: 58.4%;
+    width: 42.2%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +49,7 @@ h2 {
 }
 
 .separa {
-    width: 83%;
+    width: 60%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -62,13 +62,12 @@ h2 {
 }
 
 .d1,
-.d2,
-.d3 {
+.d2{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 33%;
-    height: 350px;
+    width: 50%;
+    height: 270px;
 }
 
 .btn {
@@ -92,7 +91,7 @@ h2 {
     margin-left: 25px;
 }
 
-.agrupamento input[type="checkbox"] {
+.agrupamento input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
@@ -143,3 +142,4 @@ h2 {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
