--- a/css/avaliacaopaciente.css
+++ b/css/avaliacaopaciente.css
@@ -19,7 +19,6 @@ body {
     align-items: center;
     justify-items: center;
     align-content: center;
-    padding: 20px;
 }
 
 .texto {
@@ -38,7 +37,7 @@ h2 {
 }
 
 .form {
-    width: 70%;
+    width: 100%;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -49,12 +48,11 @@ h2 {
 }
 
 .separa {
-    width: 83%;
+    width: 95%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border: 3px red solid;
-    padding: 10px;
+    padding: 2%;
 }
 
 .form input {
@@ -73,13 +71,25 @@ h2 {
 
 .btn {
     border-radius: 20px;
-    width: 80px;
-    height: 30px;
+    width: 90px;
+    height: 40px;
     color: white;
     background-color: red;
     border: none;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
+    margin: 3%;
+    font-size: 16px
+}
+
+.separa_btn{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
 }
 
 .btn:hover {
@@ -87,15 +97,8 @@ h2 {
     transform: scale(1.03);
 }
 
-.texto1 {
+.texto1{
     position: absolute;
-    margin-left: 25px;
-    font-size: 14px;
-}
-
-.escreve {
-    position: absolute;
-    margin-top: -5.5px;
     margin-left: 25px;
 }
 
@@ -113,7 +116,7 @@ h2 {
     left: 10;
     height: 21.5px;
     width: 21.5px;
-    background-color: #eeeeeed8;
+    background-color: #eee;
     cursor: pointer;
 }
 
@@ -125,7 +128,6 @@ h2 {
     background-image: url("../image/X.png") !important;
     background-size: cover;
     background-position: center;
-    background-size: 330%;
     background-color: red;
 }
 
@@ -149,6 +151,12 @@ h2 {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+.escreve {
+    position: absolute;
+    margin-top: -5.5px;
+    margin-left: 25px;
 }
 
 input[type="text"] {
