--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,6 +7,10 @@
     width: 100%;
     justify-content: space-around;
     height: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
 }
 
 .cennav{
@@ -18,7 +22,7 @@
 }
 
 .esqnav .linha{
-    display: none;
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: start;
@@ -38,10 +42,40 @@
     font-family: 'Poppins',sans-serif;
     font-size: 18px;
     font-weight: 600;
-    color: #fff
+    color: #fff;
+}
+
+.cennav2 .linha{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    max-height: 40px;
+    font-family: 'Poppins',sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+}
+
+.linha p{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .dirnav .linha{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    max-height: 40px;
+    font-family: 'Poppins',sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff
+}
+
+.dirnav2 .linha{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -67,6 +101,7 @@
     align-content: center;
     height: 200px;
     color: rgb(230, 224, 57);
+    overflow: hidden;
 }
 
 .port img{
@@ -86,7 +121,12 @@
     align-items: center;
     align-content: center;
     margin-top: 10px;
+}
 
+.linha{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .titulo h2{
@@ -95,5 +135,95 @@
 }
 
 .titulo h4{
-    margin: 0
+    margin: 0;
+}
+
+.dado{
+    background-color: #33338D;
+    color: #fff;
+    font-size: 23px;
+    position: absolute;
+    top: 196px;
+    right: 0px;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
+    transition: .4s;
+}
+
+.dado:hover{
+    background-color: #1b1b63;
+}
+
+.telapreta{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.808);
+    top: 0;
+    left: 0;
+    display: none;
+    z-index: 2;
+}
+
+.dadosos{
+    position: fixed;
+    width: 80%;
+    background-color: #33338D;
+    height: 45%;
+    z-index: 3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    justify-items: center;
+    top: 50%;
+    left: 50%;
+    margin-top: -10%;
+    margin-left: -40%;
+    border-radius: 25px;
+    overflow: hidden;
+}
+
+@media (max-width: 1200px){
+    .dadosos{
+        flex-direction: column;
+        height: 90%;
+        margin-top: -350px;
+        align-items: flex-start;
+        padding-left: 3%;
+    }
+}
+
+@media (max-width: 800px){
+    .cennav{
+        display: none;
+    }
+    .dirnav{
+        display: none;
+    }
+    
+    .port{
+        width: 100%
+    }
+}
+@media (max-width: 450px){
+    .port img{
+        height: 90px;
+        margin: 0
+    }
+    .port{
+        font-size: 10px;
+    }
+    .navbar h2{
+        font-size: 14px;
+    }
+
+    .navbar{
+        height: 160px;
+    }
+
+    .dado{
+        top: 154px
+    }
 }
