--- a/css/principal.css
+++ b/css/principal.css
@@ -13,14 +13,14 @@ body{
 }
 
 .abacima{
-    background-color: red;
+    background-color: rgb(164, 19, 19);
     width: 100%;
     text-align: center;
 }
 
 .abas{
     margin: 3%;
-    border: 2px solid red;
+    border: 2px solid rgb(164, 19, 19);
     overflow: hidden;
     border-radius: 20px;
     font-size: 24px;
@@ -37,7 +37,7 @@ body{
 
 .abasmen{
     margin: 3%;
-    border: 2px solid red;
+    border: 2px solid rgb(164, 19, 19);
     overflow: hidden;
     border-radius: 20px;
     font-size: 24px;
@@ -58,4 +58,22 @@ iframe{
 
 .fa-solid{
     transition: .4s;
+}
+
+#iframe1{
+    display: block;
+}
+
+#aba1{
+    height: 650px;
+}
+
+.lado{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
 }
