--- a/css/vitimaera.css
+++ b/css/vitimaera.css
@@ -23,7 +23,7 @@ body {
 }
 
 .texto {
-    background-color: red;
+    background-color: rgb(164, 19, 19);
     width: 42.2%;
     display: flex;
     justify-content: center;
@@ -33,7 +33,7 @@ body {
 
 h2 {
     font-size: 30px;
-    background-color: red;
+    background-color: rgb(164, 19, 19);
     color: white;
 }
 
@@ -53,7 +53,7 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border: 3px red solid;
+    border: 3px rgb(164, 19, 19) solid;
     padding: 10px;
 }
 
@@ -75,7 +75,7 @@ h2 {
     width: 80px;
     height: 30px;
     color: white;
-    background-color: red;
+    background-color: rgb(164, 19, 19);
     border: none;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
@@ -118,7 +118,7 @@ h2 {
     background-size: cover;
     background-position: center;
     
-    background-color: red;
+    background-color: rgb(164, 19, 19);
 }
 
 .agrupamento:after {
