--- a/css/janelas.css
+++ b/css/janelas.css
@@ -121,7 +121,7 @@ h2 {
     left: 10;
     height: 21.5px;
     width: 21.5px;
-    background-color: #eee;
+    background-color: rgb(190, 189, 189);
     cursor: pointer;
 }
 
@@ -165,14 +165,33 @@ h2 {
 }
 
 input[type="text"] {
-    padding: 0.6rem;
+    padding: .7rem;
     width: 60%;
-    height: 2px;
-    border: 2px solid #1f0025;
-    border-radius: 5px;
-    font-size: 14px;
+    height: 10px;
+    border: none;
+    border-bottom: 2px solid #2c0202;
+    outline: none;
+    background-color: rgb(246, 246, 246);
+    font-size: 16px;
     outline: none;
     transition: all .3s;
     font-family: 'Poppins', sans-serif;
-    margin: 2%
+    margin: 2%;
+    margin-top: -1%;
+    transition: .5s;
+}
+
+input[type="text"]:focus{
+    border-bottom: 2px solid red;
+}
+
+select{
+    padding: .2rem;
+    width: 100%;
+    border: 2px solid #50505064;
+    color: #2c0202;
+    font-size: 16px;
+    transition: all .3s;
+    font-family: 'Poppins', sans-serif;
+    margin-top: -10%;
 }
