--- a/css/janelas.css
+++ b/css/janelas.css
@@ -187,11 +187,17 @@ input[type="text"]:focus{
 
 select{
     padding: .2rem;
-    width: 100%;
+    width: 210px;
     border: 2px solid #50505064;
     color: #2c0202;
     font-size: 16px;
     transition: all .3s;
     font-family: 'Poppins', sans-serif;
     margin-top: -10%;
+}
+
+.outro{
+    position: absolute;
+    margin-top: -5.5px;
+    margin-left: -1.5px;
 }
