--- a/css/janelas.css
+++ b/css/janelas.css
@@ -8,6 +8,12 @@ body {
     align-items: center;
     justify-items: center;
     align-content: center;
+    height: 100%;
+    
+}
+
+div.texto1{
+    
 }
 
 .container {
@@ -38,7 +44,7 @@ h2 {
 
 .form {
     width: 100%;
-    height: 80%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,7 +72,8 @@ h2 {
     flex-direction: column;
     justify-content: space-around;
     width: 33%;
-    height: 350px;
+    height: 100%;
+    overflow: hidden;
 }
 
 .btn {
@@ -105,6 +112,10 @@ h2 {
 .texto1{
     position: absolute;
     margin-left: 25px;
+    overflow: hidden;
+    width: 25%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .agrupamento input[type="checkbox"] {
@@ -200,4 +211,9 @@ select{
     position: absolute;
     margin-top: -5.5px;
     margin-left: -1.5px;
+}
+
+label{
+    margin-top: 5%;
+    
 }
