--- a/css/ffelc.css
+++ b/css/ffelc.css
@@ -1,1 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: column;
+}
+
+input  [type="text"] {
+    width: 50px;
+    font-size: 23px;
+}
+
+label{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+input [type="submit"]{
+    background-color: #4CAF50; /* Green */
+}
