--- a/css/dados2.css
+++ b/css/dados2.css
@@ -27,12 +27,13 @@ body{
     flex-direction: column;
 }
 
-.inputs{
+input[type="varchar"]{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 15px;
+    border-radius: 6px;
 }
 
 form{
@@ -44,6 +45,42 @@ form{
     gap: 30px;
     height: fit-content;
     color: #fff;
+}
+
+
+
+
+.inputs input{
+    border: none;
+    background-color: rgba(35, 27, 190, 0.63);
+}
+
+.btn {
+    border-radius: 8px;
+    width: 70px;
+    height: 30px;
+    color: white;
+    background-color: #2f2f9f;
+    border: none;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+    margin: 3%;
+    font-size: 14px
+}
+
+.separa_btn{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+.btn:hover{
+    background-color: #080847;
+    transition: .2s;
 }
 
 .agrupamento input[type="checkbox"] {
@@ -95,38 +132,4 @@ form{
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-}
-
-
-.inputs input{
-    border: none;
-    background-color: rgba(35, 27, 190, 0.63);
-}
-
-.btn {
-    border-radius: 8px;
-    width: 70px;
-    height: 30px;
-    color: white;
-    background-color: #2f2f9f;
-    border: none;
-    font-family: 'Poppins', sans-serif;
-    cursor: pointer;
-    margin: 3%;
-    font-size: 14px
-}
-
-.separa_btn{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    justify-items: center;
-}
-
-.btn:hover{
-    background-color: #080847;
-    transition: .2s;
 }
